# portfolio

./: CNAME  Cargo.toml  Trunk.toml  index.html  railwind.config.ron
.github/workflows/: build-and-deploy.yml
src/: canvas.rs  home.rs  info.rs  life.rs  main.rs  raw_draw.rs
