[package]
name = "portfolio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web-sys-main-loop = "0.1.8"
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"

[dependencies.web-sys]
version = "0.3.67"
features = [ "HtmlCanvasElement", "CanvasRenderingContext2d", "ImageData", "DomRect", "Element" ]

[lints.clippy]
clone-on-ref-ptr = "deny"
pedantic = "deny"
unwrap_used = "deny"
